argo-workflows/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
  namespace: argo-workflows
spec:
  hostnames:
  - argo-workflows.local.ongy.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: argo-workflows-server
      port: 2746
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
